# options-bot

./: .env.example  .gitignore  CLAUDE.md  SPRINTS.md  main.py  pyproject.toml
.github/workflows/: ci.yml  daily.yml  theta-smoke.yml  weekly.yml
docs/: backfill-runbook.md
rules/: rules_v1.yaml
scripts/: chain_smoke.py  theta_smoke.py  verify_migrations.sh
src/: backfill.py  brief.py  chain.py  config.py  db.py  heartbeat.py  iv.py  sync.py  theta.py  weekly.py
src/engine/: black_scholes.py  iv.py  stub.py
supabase/migrations/: 0001_init.sql  0002_heartbeat.sql  0003_asset_type_vocabulary.sql  0004_sync_runs.sql  0005_iv_history_provenance.sql
tests/: conftest.py  test_backfill.py  test_black_scholes.py  test_brief.py  test_chain.py  test_db.py  test_db_integration.py  test_engine_iv.py  test_engine_stub.py  test_heartbeat.py  test_iv.py  test_sync.py  test_sync_integration.py  test_theta.py  test_weekly.py
