[project]
name = "options-bot"
version = "0.1.0"
description = "Suggestion-only options income engine (covered calls / cash-secured puts)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
